app/src/main/java/com/serenegiant/lang/script/ScriptParser.java
/* ScriptParser.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. ScriptParser.java */
package com.serenegiant.lang.script;
import android.util.Log;
import java.util.*;

public class ScriptParser/*@bgen(jjtree)*/implements ScriptParserTreeConstants, ScriptParserConstants {/*@bgen(jjtree)*/
  protected JJTScriptParserState jjtree = new JJTScriptParserState();
        private static final String TAG = "ScriptParser";

        /** シンボルテーブル */
        private final java.util.Map<String, Object> symbols = new java.util.LinkedHashMap<String, Object>();

        /** 演算用のスタック */
        private Object[] stack = new Object[1024];
        private int top = -1;

        /* 演算用のスタックに値をプッシュ */
        public void push_op(Object op) {
                stack[++top] = op;
        }

        /* 演算用のスタックに値をプッシュ */
        public void push_op(int index, Object op) {
                top += index;
                stack[top] = op;
        }

        /* 演算用のスタックから値を取得 */
        public Object pop_op() {
                return stack[top--];
        }

        /* 演算用のスタックの上から指定した番号の値を取得(スタックからは取り出さない) */
        public Object peek_op(int index) {
                return stack[top + index];
        }

        /* シンボルを登録 */
        public void add_symbol(String symbol, Object value) {
                symbols.put(symbol, value);
        }

        /* シンボルに対応する値を取得, シンボルテーブルに存在しなければnull */
        public Object get_symbol(String symbol) {
                if (symbols.containsKey(symbol)) {
                        return symbols.get(symbol);
                } else {
                        return null;
                }
        }

        /* シンボルがシンボルテーブルに登録されているかどうかを取得 */
        public boolean symbol_exist(String symbol) {
                return symbols.containsKey(symbol);
        }

    /** typedefで宣言した型名保持用 */
    private final Set types = new HashSet();

    /** パーサーがtypedefの処理中かどうかを保持するため */
    private final Stack typedefParsingStack = new Stack();

    /** 指定した識別子がtypedefで定義した型名かどうかを返す */
    private boolean isType(String type){
                return types.contains(type);
    }

    /** typedef用に型名を追加 */
    private void addType(String type) {
                types.add(type);
    }

    /** typedefで定義した型名の一覧を出力 */
    private void printTypes(){
                for (Iterator i = types.iterator(); i.hasNext();) {
                        System.out.println(i.next());
                }
    }

    // パーサーを生成
    public static ScriptParser createInstance(java.io.InputStream in) {
                final ScriptParser parser = new ScriptParser(in);
                // Hack to include type "special types"
            parser.types.add("__signed__");
            parser.types.add("__const");
            parser.types.add("__inline__");
            parser.types.add("__signed");
                return parser;
        }

/**************************************************
 * ここから下が文法(生成規則)
 **************************************************/
/** これが解析のエントリポイント */
  final public void TranslationUnit() throws ParseException {
    trace_call("TranslationUnit");
    try {
      label_1:
      while (true) {
        ExternalDeclaration();
        if (jj_2_1(1)) {
          ;
        } else {
          break label_1;
        }
      }
printTypes();
                Log.i(TAG, "\u89e3\u6790\u7d42\u4e86");
    } finally {
      trace_return("TranslationUnit");
    }
  }

/** 外部宣言 */
  final public void ExternalDeclaration() throws ParseException {
    trace_call("ExternalDeclaration");
    try {
      if (jj_2_2(2147483647)) {
        FunctionDefinition();
      } else if (jj_2_3(1)) {
        Declaration();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 55:{
          jj_consume_token(55);
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("ExternalDeclaration");
    }
  }

/** 関数定義 */
  final public void FunctionDefinition() throws ParseException {
    trace_call("FunctionDefinition");
    try {
      if (jj_2_4(2147483647)) {
        DeclarationSpecifiers();
      } else {
        ;
      }
      Declarator();
      if (jj_2_5(1)) {
        DeclarationList();
      } else {
        ;
      }
      CompoundStatement();
    } finally {
      trace_return("FunctionDefinition");
    }
  }

/** 宣言 */
  final public void Declaration() throws ParseException {
    trace_call("Declaration");
    try {
      DeclarationSpecifiers();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:
      case 61:
      case 65:{
        InitDeclaratorList();
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        ;
      }
      jj_consume_token(55);
    } finally {
      trace_return("Declaration");
    }
  }

/** 宣言の種類(型)リスト */
  final public void DeclarationList() throws ParseException {
    trace_call("DeclarationList");
    try {
      label_2:
      while (true) {
        Declaration();
        if (jj_2_6(2147483647)) {
          ;
        } else {
          break label_2;
        }
      }
    } finally {
      trace_return("DeclarationList");
    }
  }

/** 宣言のアクセス指定子 */
  final public void DeclarationSpecifiers() throws ParseException {
    trace_call("DeclarationSpecifiers");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case REGISTER:
      case TYPEDEF:
      case EXTERN:
      case STATIC:
      case AUTO:{
        StorageClassSpecifier();
        if (jj_2_7(2147483647)) {
          DeclarationSpecifiers();
        } else {
          ;
        }
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        if (jj_2_10(1)) {
          TypeSpecifier();
          if (jj_2_8(2147483647)) {
            DeclarationSpecifiers();
          } else {
            ;
          }
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case VOLATILE:
          case CONST:{
            TypeQualifier();
            if (jj_2_9(2147483647)) {
              DeclarationSpecifiers();
            } else {
              ;
            }
            break;
            }
          default:
            jj_la1[3] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    } finally {
      trace_return("DeclarationSpecifiers");
    }
  }

/** 変数・型のアクセス指定子 */
  final public void StorageClassSpecifier() throws ParseException {
    trace_call("StorageClassSpecifier");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AUTO:{
        jj_consume_token(AUTO);
        break;
        }
      case REGISTER:{
        jj_consume_token(REGISTER);
        break;
        }
      case STATIC:{
        jj_consume_token(STATIC);
        break;
        }
      case EXTERN:{
        jj_consume_token(EXTERN);
        break;
        }
      case TYPEDEF:{
        jj_consume_token(TYPEDEF);
typedefParsingStack.push(Boolean.TRUE);
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("StorageClassSpecifier");
    }
  }

/** 型の種類 */
  final public void TypeSpecifier() throws ParseException {
    trace_call("TypeSpecifier");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VOID:{
        jj_consume_token(VOID);
        break;
        }
      case CHAR:{
        jj_consume_token(CHAR);
        break;
        }
      case SHORT:{
        jj_consume_token(SHORT);
        break;
        }
      case INT:{
        jj_consume_token(INT);
        break;
        }
      case LONG:{
        jj_consume_token(LONG);
        break;
        }
      case FLOAT:{
        jj_consume_token(FLOAT);
        break;
        }
      case DOUBLE:{
        jj_consume_token(DOUBLE);
        break;
        }
      case SIGNED:{
        jj_consume_token(SIGNED);
        break;
        }
      case UNSIGNED:{
        jj_consume_token(UNSIGNED);
        break;
        }
      case STRUCT:
      case UNION:{
        StructOrUnionSpecifier();
        break;
        }
      case ENUM:{
        EnumSpecifier();
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        if (isType(getToken(1).image)) {
          TypedefName();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("TypeSpecifier");
    }
  }

/** 定数型 */
  final public void TypeQualifier() throws ParseException {
    trace_call("TypeQualifier");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CONST:{
        jj_consume_token(CONST);
        break;
        }
      case VOLATILE:{
        jj_consume_token(VOLATILE);
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
Log.v(TAG, "\u5b9a\u6570\u578b");
    } finally {
      trace_return("TypeQualifier");
    }
  }

/** 構造体/ユニオンアクセス指定子 */
  final public void StructOrUnionSpecifier() throws ParseException {
    trace_call("StructOrUnionSpecifier");
    try {
typedefParsingStack.push(Boolean.FALSE);
      StructOrUnion();
      if (jj_2_11(3)) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFIER:{
          jj_consume_token(IDENTIFIER);
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          ;
        }
        jj_consume_token(56);
        StructDeclarationList();
        jj_consume_token(57);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFIER:{
          jj_consume_token(IDENTIFIER);
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
typedefParsingStack.pop();
    } finally {
      trace_return("StructOrUnionSpecifier");
    }
  }

/** 構造体/ユニオン */
  final public void StructOrUnion() throws ParseException {
    trace_call("StructOrUnion");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case STRUCT:{
        jj_consume_token(STRUCT);
        break;
        }
      case UNION:{
        jj_consume_token(UNION);
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("StructOrUnion");
    }
  }

/** 構造体/ユニオン宣言リスト */
  final public void StructDeclarationList() throws ParseException {
    trace_call("StructDeclarationList");
    try {
      label_3:
      while (true) {
        StructDeclaration();
        if (jj_2_12(1)) {
          ;
        } else {
          break label_3;
        }
      }
    } finally {
      trace_return("StructDeclarationList");
    }
  }

/** 構造体/ユニオン宣言 */
  final public void StructDeclaration() throws ParseException {
    trace_call("StructDeclaration");
    try {
      SpecifierQualifierList();
      StructDeclaratorList();
      jj_consume_token(55);
    } finally {
      trace_return("StructDeclaration");
    }
  }

/** 構造体/ユニオンの定義内容リスト */
  final public void StructDeclaratorList() throws ParseException {
    trace_call("StructDeclaratorList");
    try {
      StructDeclarator();
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 58:{
          ;
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          break label_4;
        }
        jj_consume_token(58);
        StructDeclarator();
      }
    } finally {
      trace_return("StructDeclaratorList");
    }
  }

/** 構造体/ユニオンの定義内容 */
  final public void StructDeclarator() throws ParseException {
    trace_call("StructDeclarator");
    try {
      if (jj_2_13(3)) {
        Declarator();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFIER:
        case 59:
        case 61:
        case 65:{
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case IDENTIFIER:
          case 61:
          case 65:{
            Declarator();
            break;
            }
          default:
            jj_la1[11] = jj_gen;
            ;
          }
          jj_consume_token(59);
          ConstantExpression();
          break;
          }
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("StructDeclarator");
    }
  }

/** 初期化付き宣言リスト */
  final public void InitDeclaratorList() throws ParseException {
    trace_call("InitDeclaratorList");
    try {
      InitDeclarator();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 58:{
          ;
          break;
          }
        default:
          jj_la1[13] = jj_gen;
          break label_5;
        }
        jj_consume_token(58);
        InitDeclarator();
      }
// Finished with a typedefDeclaration??
                if(!(typedefParsingStack.empty()) && ((Boolean)typedefParsingStack.peek()).booleanValue()) {
                        typedefParsingStack.pop();
                }
                Log.v(TAG, "\u521d\u671f\u5316\u4ed8\u304d\u5ba3\u8a00\u30ea\u30b9\u30c8");
    } finally {
      trace_return("InitDeclaratorList");
    }
  }

/** 初期化付き宣言 */
  final public void InitDeclarator() throws ParseException {
    trace_call("InitDeclarator");
    try {
      Declarator();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 60:{
        jj_consume_token(60);
        Initializer();
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        ;
      }
Log.v(TAG, "\u521d\u671f\u5316\u4ed8\u304d\u5ba3\u8a00");
    } finally {
      trace_return("InitDeclarator");
    }
  }

/** アクセス指定子 */
  final public void SpecifierQualifierList() throws ParseException {
    trace_call("SpecifierQualifierList");
    try {
      if (jj_2_16(1)) {
        TypeSpecifier();
        if (jj_2_14(2147483647)) {
          SpecifierQualifierList();
        } else {
          ;
        }
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case VOLATILE:
        case CONST:{
          TypeQualifier();
          if (jj_2_15(2147483647)) {
            SpecifierQualifierList();
          } else {
            ;
          }
          break;
          }
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("SpecifierQualifierList");
    }
  }

/** 列挙型 */
  final public void EnumSpecifier() throws ParseException {
    trace_call("EnumSpecifier");
    try {
      jj_consume_token(ENUM);
      if (jj_2_17(3)) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFIER:{
          jj_consume_token(IDENTIFIER);
          break;
          }
        default:
          jj_la1[16] = jj_gen;
          ;
        }
        jj_consume_token(56);
        EnumeratorList();
        jj_consume_token(57);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFIER:{
          jj_consume_token(IDENTIFIER);
          break;
          }
        default:
          jj_la1[17] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("EnumSpecifier");
    }
  }

/** 列挙型の宣言リスト */
  final public void EnumeratorList() throws ParseException {
    trace_call("EnumeratorList");
    try {
      Enumerator();
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 58:{
          ;
          break;
          }
        default:
          jj_la1[18] = jj_gen;
          break label_6;
        }
        jj_consume_token(58);
        Enumerator();
      }
    } finally {
      trace_return("EnumeratorList");
    }
  }

/** 列挙型のアイテム１つ分 */
  final public void Enumerator() throws ParseException {
    trace_call("Enumerator");
    try {
      jj_consume_token(IDENTIFIER);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 60:{
        jj_consume_token(60);
        ConstantExpression();
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        ;
      }
    } finally {
      trace_return("Enumerator");
    }
  }
